# metk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/metk/: __init__.py  core.py  loads.py  props.py
src/metk/materials/: __init__.py  base_materials.py  common.py  materials.py
src/metk/materials/data/: 4140.json  A36.json  A500-A.json  A500-B.json  A500-C.json  A500-D.json  A572-50.json  A572-55.json  A572-60.json  A572-65.json  A992.json  E6010.json  Grade 5.json  Grade 8.json
src/metk/shapes/: __init__.py  base.py  generic.py  structural_shapes.py  weld.py
src/metk/shapes/scripts/: fetch_AISC_shapes.py
src/metk/shapes/structural_shape_data/: 2L.pkl  C.pkl  HP.pkl  HSS.pkl  L.pkl  M.pkl  MC.pkl  MT.pkl  PIPE.pkl  S.pkl  ST.pkl  W.pkl  WT.pkl  shapes.db
src/metk/stress/: __init__.py  core.py
src/metk/structural/: __init__.py  bolt.py  member.py  structural_object.py  weld.py
src/metk/structural/data/bolt/: coarse.pkl  fine.pkl
tests/: test_core.py  test_integration.py  test_loads.py  test_materials.py  test_shapes.py  test_stress.py
