[project]
name = "metk"
version = "0.1.0"
description = "Utilties for mechanical engineering machine design calculations"
authors = [{ name = "Rob Siegwart", email = "rob@robsiegwart.com" }]
dependencies = [
    "numpy",
    "pandas",
    "tabulate"
]

[project.optional-dependencies]
dev = ["pytest"]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "B"]

[tool.ruff.lint.per-file-ignores]
# __init__.py files use star imports and explicit re-exports intentionally
"**/__init__.py" = ["F401", "F403"]

