[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metk"
version = "0.1.0"
description = "Utilities for mechanical engineering machine design calculations"
authors = [{ name = "Rob Siegwart", email = "rob@robsiegwart.com" }]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "tabulate>=0.8.9",
    "openpyxl>=3.0"
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["engineering", "machine design", "manufacturing"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mechanical Engineering"
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
    "pytest>=7.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "B"]

[tool.ruff.lint.per-file-ignores]
# __init__.py files use star imports and explicit re-exports intentionally
"**/__init__.py" = ["F401", "F403"]
